--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -199,7 +199,9 @@
    "id": "02d96e07-9751-47ae-b63d-57b1e9dc1727",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"example\""
+   ]
   }
  ],
  "metadata": {
