--- a/data_split_analysis.ipynb
+++ b/data_split_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "40bc0d1b-c2c1-45a6-a175-fb7c561f23c4",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "02eecb98-ca3d-40e3-b340-8f3af54dc5bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filePath = \"KiDS-DR5-WCScut_x_DESI-DR1-small.fits\""
+    "filePath = \"../KiDS-DR5-WCScut_x_DESI-DR1-small.fits\""
    ]
   },
   {
