--- a/notebooks/data_split_analysis.ipynb
+++ b/notebooks/data_split_analysis.ipynb
@@ -1093,8 +1093,415 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0b080cbb-a030-4ea3-a6da-5a705bb6158b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kdrabicki/projekt/data_frame.py:51: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  if process:\n"
+     ]
+    }
+   ],
+   "source": [
+    "importlib.reload(data_frame)\n",
+    "df = DataFrame(filePath, \"GALAXY\", filler=MaxFiller())\n",
+    "X_train, y_train = df.data[df.features], df.data[\"Z\"]\n",
+    "df = df.data[df.features + [\"Z\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "28afb732-f2f6-44fd-98f0-721fbece239c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MAG_GAAP_u</th>\n",
+       "      <th>MAG_GAAP_g</th>\n",
+       "      <th>MAG_GAAP_r</th>\n",
+       "      <th>MAG_GAAP_i1</th>\n",
+       "      <th>MAG_GAAP_i2</th>\n",
+       "      <th>MAG_GAAP_Z</th>\n",
+       "      <th>MAG_GAAP_Y</th>\n",
+       "      <th>MAG_GAAP_J</th>\n",
+       "      <th>MAG_GAAP_H</th>\n",
+       "      <th>MAG_GAAP_Ks</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Z-J</th>\n",
+       "      <th>Z-H</th>\n",
+       "      <th>Z-Ks</th>\n",
+       "      <th>Y-J</th>\n",
+       "      <th>Y-H</th>\n",
+       "      <th>Y-Ks</th>\n",
+       "      <th>J-H</th>\n",
+       "      <th>J-Ks</th>\n",
+       "      <th>H-Ks</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5392</th>\n",
+       "      <td>25.849642</td>\n",
+       "      <td>26.602072</td>\n",
+       "      <td>25.408295</td>\n",
+       "      <td>22.788668</td>\n",
+       "      <td>22.441153</td>\n",
+       "      <td>20.920452</td>\n",
+       "      <td>20.449062</td>\n",
+       "      <td>20.194057</td>\n",
+       "      <td>19.660755</td>\n",
+       "      <td>19.207859</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.726395</td>\n",
+       "      <td>1.259697</td>\n",
+       "      <td>1.712593</td>\n",
+       "      <td>0.255005</td>\n",
+       "      <td>0.788307</td>\n",
+       "      <td>1.241203</td>\n",
+       "      <td>0.533302</td>\n",
+       "      <td>0.986198</td>\n",
+       "      <td>0.452896</td>\n",
+       "      <td>0.937608</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7809</th>\n",
+       "      <td>23.904972</td>\n",
+       "      <td>24.129463</td>\n",
+       "      <td>25.436081</td>\n",
+       "      <td>24.011305</td>\n",
+       "      <td>24.353056</td>\n",
+       "      <td>22.292376</td>\n",
+       "      <td>21.706003</td>\n",
+       "      <td>21.939383</td>\n",
+       "      <td>22.954672</td>\n",
+       "      <td>21.913380</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.352993</td>\n",
+       "      <td>-0.662296</td>\n",
+       "      <td>0.378996</td>\n",
+       "      <td>-0.233379</td>\n",
+       "      <td>-1.248669</td>\n",
+       "      <td>-0.207376</td>\n",
+       "      <td>-1.015289</td>\n",
+       "      <td>0.026003</td>\n",
+       "      <td>1.041292</td>\n",
+       "      <td>1.027585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11652</th>\n",
+       "      <td>24.313776</td>\n",
+       "      <td>24.378164</td>\n",
+       "      <td>25.059071</td>\n",
+       "      <td>22.909340</td>\n",
+       "      <td>22.550478</td>\n",
+       "      <td>20.813993</td>\n",
+       "      <td>20.344898</td>\n",
+       "      <td>19.962105</td>\n",
+       "      <td>19.592201</td>\n",
+       "      <td>18.987860</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.851889</td>\n",
+       "      <td>1.221792</td>\n",
+       "      <td>1.826134</td>\n",
+       "      <td>0.382793</td>\n",
+       "      <td>0.752697</td>\n",
+       "      <td>1.357038</td>\n",
+       "      <td>0.369904</td>\n",
+       "      <td>0.974245</td>\n",
+       "      <td>0.604342</td>\n",
+       "      <td>0.988270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18941</th>\n",
+       "      <td>24.692867</td>\n",
+       "      <td>24.093168</td>\n",
+       "      <td>25.446890</td>\n",
+       "      <td>24.519743</td>\n",
+       "      <td>23.999399</td>\n",
+       "      <td>23.493172</td>\n",
+       "      <td>22.614685</td>\n",
+       "      <td>23.195444</td>\n",
+       "      <td>22.627182</td>\n",
+       "      <td>23.545700</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.297728</td>\n",
+       "      <td>0.865990</td>\n",
+       "      <td>-0.052528</td>\n",
+       "      <td>-0.580759</td>\n",
+       "      <td>-0.012497</td>\n",
+       "      <td>-0.931015</td>\n",
+       "      <td>0.568262</td>\n",
+       "      <td>-0.350256</td>\n",
+       "      <td>-0.918518</td>\n",
+       "      <td>0.800287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32354</th>\n",
+       "      <td>23.964670</td>\n",
+       "      <td>23.803078</td>\n",
+       "      <td>25.316530</td>\n",
+       "      <td>25.820089</td>\n",
+       "      <td>24.107401</td>\n",
+       "      <td>22.672039</td>\n",
+       "      <td>24.074209</td>\n",
+       "      <td>25.515652</td>\n",
+       "      <td>22.725166</td>\n",
+       "      <td>22.300714</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.843613</td>\n",
+       "      <td>-0.053127</td>\n",
+       "      <td>0.371325</td>\n",
+       "      <td>-1.441442</td>\n",
+       "      <td>1.349043</td>\n",
+       "      <td>1.773495</td>\n",
+       "      <td>2.790485</td>\n",
+       "      <td>3.214937</td>\n",
+       "      <td>0.424452</td>\n",
+       "      <td>0.764852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2621114</th>\n",
+       "      <td>25.849642</td>\n",
+       "      <td>24.680603</td>\n",
+       "      <td>25.601961</td>\n",
+       "      <td>21.799789</td>\n",
+       "      <td>21.895287</td>\n",
+       "      <td>20.629318</td>\n",
+       "      <td>20.238127</td>\n",
+       "      <td>19.958521</td>\n",
+       "      <td>19.495062</td>\n",
+       "      <td>19.070192</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.670797</td>\n",
+       "      <td>1.134256</td>\n",
+       "      <td>1.559126</td>\n",
+       "      <td>0.279606</td>\n",
+       "      <td>0.743065</td>\n",
+       "      <td>1.167934</td>\n",
+       "      <td>0.463459</td>\n",
+       "      <td>0.888329</td>\n",
+       "      <td>0.424870</td>\n",
+       "      <td>0.780052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2631064</th>\n",
+       "      <td>23.348295</td>\n",
+       "      <td>23.239069</td>\n",
+       "      <td>25.210258</td>\n",
+       "      <td>22.996099</td>\n",
+       "      <td>22.427868</td>\n",
+       "      <td>30.210012</td>\n",
+       "      <td>35.063728</td>\n",
+       "      <td>31.180265</td>\n",
+       "      <td>33.073498</td>\n",
+       "      <td>34.507412</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.970253</td>\n",
+       "      <td>-2.863485</td>\n",
+       "      <td>-4.297400</td>\n",
+       "      <td>3.883463</td>\n",
+       "      <td>1.990231</td>\n",
+       "      <td>0.556316</td>\n",
+       "      <td>-1.893232</td>\n",
+       "      <td>-3.327147</td>\n",
+       "      <td>-1.433914</td>\n",
+       "      <td>1.115842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2640272</th>\n",
+       "      <td>25.849642</td>\n",
+       "      <td>23.925890</td>\n",
+       "      <td>25.852150</td>\n",
+       "      <td>23.567511</td>\n",
+       "      <td>23.379137</td>\n",
+       "      <td>23.344215</td>\n",
+       "      <td>22.535780</td>\n",
+       "      <td>21.941628</td>\n",
+       "      <td>33.073498</td>\n",
+       "      <td>23.649685</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.402588</td>\n",
+       "      <td>-9.729282</td>\n",
+       "      <td>-0.305470</td>\n",
+       "      <td>0.594152</td>\n",
+       "      <td>-10.537718</td>\n",
+       "      <td>-1.113905</td>\n",
+       "      <td>-11.131870</td>\n",
+       "      <td>-1.708057</td>\n",
+       "      <td>9.423813</td>\n",
+       "      <td>1.118753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2644506</th>\n",
+       "      <td>23.860886</td>\n",
+       "      <td>24.021683</td>\n",
+       "      <td>25.668604</td>\n",
+       "      <td>25.820089</td>\n",
+       "      <td>25.124693</td>\n",
+       "      <td>23.261106</td>\n",
+       "      <td>26.960676</td>\n",
+       "      <td>23.277266</td>\n",
+       "      <td>22.142111</td>\n",
+       "      <td>22.271568</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.016159</td>\n",
+       "      <td>1.118996</td>\n",
+       "      <td>0.989538</td>\n",
+       "      <td>3.683411</td>\n",
+       "      <td>4.818565</td>\n",
+       "      <td>4.689108</td>\n",
+       "      <td>1.135155</td>\n",
+       "      <td>1.005697</td>\n",
+       "      <td>-0.129457</td>\n",
+       "      <td>1.349897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2646550</th>\n",
+       "      <td>24.381081</td>\n",
+       "      <td>25.121101</td>\n",
+       "      <td>26.094339</td>\n",
+       "      <td>25.820089</td>\n",
+       "      <td>25.124693</td>\n",
+       "      <td>23.161198</td>\n",
+       "      <td>24.631828</td>\n",
+       "      <td>23.542154</td>\n",
+       "      <td>33.073498</td>\n",
+       "      <td>22.497726</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.380957</td>\n",
+       "      <td>-9.912300</td>\n",
+       "      <td>0.663471</td>\n",
+       "      <td>1.089674</td>\n",
+       "      <td>-8.441669</td>\n",
+       "      <td>2.134102</td>\n",
+       "      <td>-9.531343</td>\n",
+       "      <td>1.044428</td>\n",
+       "      <td>10.575771</td>\n",
+       "      <td>0.790372</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>255 rows × 56 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         MAG_GAAP_u  MAG_GAAP_g  MAG_GAAP_r  MAG_GAAP_i1  MAG_GAAP_i2  \\\n",
+       "5392      25.849642   26.602072   25.408295    22.788668    22.441153   \n",
+       "7809      23.904972   24.129463   25.436081    24.011305    24.353056   \n",
+       "11652     24.313776   24.378164   25.059071    22.909340    22.550478   \n",
+       "18941     24.692867   24.093168   25.446890    24.519743    23.999399   \n",
+       "32354     23.964670   23.803078   25.316530    25.820089    24.107401   \n",
+       "...             ...         ...         ...          ...          ...   \n",
+       "2621114   25.849642   24.680603   25.601961    21.799789    21.895287   \n",
+       "2631064   23.348295   23.239069   25.210258    22.996099    22.427868   \n",
+       "2640272   25.849642   23.925890   25.852150    23.567511    23.379137   \n",
+       "2644506   23.860886   24.021683   25.668604    25.820089    25.124693   \n",
+       "2646550   24.381081   25.121101   26.094339    25.820089    25.124693   \n",
+       "\n",
+       "         MAG_GAAP_Z  MAG_GAAP_Y  MAG_GAAP_J  MAG_GAAP_H  MAG_GAAP_Ks  ...  \\\n",
+       "5392      20.920452   20.449062   20.194057   19.660755    19.207859  ...   \n",
+       "7809      22.292376   21.706003   21.939383   22.954672    21.913380  ...   \n",
+       "11652     20.813993   20.344898   19.962105   19.592201    18.987860  ...   \n",
+       "18941     23.493172   22.614685   23.195444   22.627182    23.545700  ...   \n",
+       "32354     22.672039   24.074209   25.515652   22.725166    22.300714  ...   \n",
+       "...             ...         ...         ...         ...          ...  ...   \n",
+       "2621114   20.629318   20.238127   19.958521   19.495062    19.070192  ...   \n",
+       "2631064   30.210012   35.063728   31.180265   33.073498    34.507412  ...   \n",
+       "2640272   23.344215   22.535780   21.941628   33.073498    23.649685  ...   \n",
+       "2644506   23.261106   26.960676   23.277266   22.142111    22.271568  ...   \n",
+       "2646550   23.161198   24.631828   23.542154   33.073498    22.497726  ...   \n",
+       "\n",
+       "              Z-J       Z-H      Z-Ks       Y-J        Y-H      Y-Ks  \\\n",
+       "5392     0.726395  1.259697  1.712593  0.255005   0.788307  1.241203   \n",
+       "7809     0.352993 -0.662296  0.378996 -0.233379  -1.248669 -0.207376   \n",
+       "11652    0.851889  1.221792  1.826134  0.382793   0.752697  1.357038   \n",
+       "18941    0.297728  0.865990 -0.052528 -0.580759  -0.012497 -0.931015   \n",
+       "32354   -2.843613 -0.053127  0.371325 -1.441442   1.349043  1.773495   \n",
+       "...           ...       ...       ...       ...        ...       ...   \n",
+       "2621114  0.670797  1.134256  1.559126  0.279606   0.743065  1.167934   \n",
+       "2631064 -0.970253 -2.863485 -4.297400  3.883463   1.990231  0.556316   \n",
+       "2640272  1.402588 -9.729282 -0.305470  0.594152 -10.537718 -1.113905   \n",
+       "2644506 -0.016159  1.118996  0.989538  3.683411   4.818565  4.689108   \n",
+       "2646550 -0.380957 -9.912300  0.663471  1.089674  -8.441669  2.134102   \n",
+       "\n",
+       "               J-H      J-Ks       H-Ks         Z  \n",
+       "5392      0.533302  0.986198   0.452896  0.937608  \n",
+       "7809     -1.015289  0.026003   1.041292  1.027585  \n",
+       "11652     0.369904  0.974245   0.604342  0.988270  \n",
+       "18941     0.568262 -0.350256  -0.918518  0.800287  \n",
+       "32354     2.790485  3.214937   0.424452  0.764852  \n",
+       "...            ...       ...        ...       ...  \n",
+       "2621114   0.463459  0.888329   0.424870  0.780052  \n",
+       "2631064  -1.893232 -3.327147  -1.433914  1.115842  \n",
+       "2640272 -11.131870 -1.708057   9.423813  1.118753  \n",
+       "2644506   1.135155  1.005697  -0.129457  1.349897  \n",
+       "2646550  -9.531343  1.044428  10.575771  0.790372  \n",
+       "\n",
+       "[255 rows x 56 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"MAG_GAAP_r\"] > 25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52415d46-9497-407a-a9fb-483c47af4fba",
    "metadata": {},
    "outputs": [],
    "source": []
