--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,32 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "9b6ea552-040a-434f-99dc-5caacd2f043f",
+   "execution_count": 21,
+   "id": "82a693c9-00a6-4e71-a7a4-ab4bc7987a6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import compare_models\n",
-    "from compare_models import *\n",
-    "import importlib"
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "import compare_models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "ec23c2cf-f181-4a45-9cde-14c5842fda8c",
+   "execution_count": 22,
+   "id": "9cd1bc1b-7657-4535-81af-edeff810a6b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filePath = r'../metrics'"
+    "comparator = compare_models.CompareModels(r\"../../metrics\")\n",
+    "test, faint = comparator.getResults()\n",
+    "\n",
+    "order = [\"single_gauss\", \"double_gauss\", \"triple_gauss\"]\n",
+    "test, faint = test.reindex(order), faint.reindex(order)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "a4c45b7c-b2c0-4aaf-9f1c-6722a185c0fd",
+   "execution_count": 23,
+   "id": "47398e35-c7ae-4aa1-83e0-c2080d1b081a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random test\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -62,46 +74,58 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>dg_mean_stddev_dropout</th>\n",
-       "      <td>0.093244</td>\n",
-       "      <td>0.833624</td>\n",
-       "      <td>0.573398</td>\n",
+       "      <th>single_gauss</th>\n",
+       "      <td>0.097607</td>\n",
+       "      <td>0.825839</td>\n",
+       "      <td>-0.174682</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sg_mean_stddev</th>\n",
-       "      <td>0.093570</td>\n",
-       "      <td>0.833041</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>double_gauss</th>\n",
+       "      <td>0.093189</td>\n",
+       "      <td>0.833722</td>\n",
+       "      <td>-0.656501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>triple_gauss</th>\n",
+       "      <td>0.093072</td>\n",
+       "      <td>0.833931</td>\n",
+       "      <td>-0.653799</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             MSE       R^2       NLL\n",
-       "model_name                                          \n",
-       "dg_mean_stddev_dropout  0.093244  0.833624  0.573398\n",
-       "sg_mean_stddev          0.093570  0.833041       NaN"
+       "                   MSE       R^2       NLL\n",
+       "model_name                                \n",
+       "single_gauss  0.097607  0.825839 -0.174682\n",
+       "double_gauss  0.093189  0.833722 -0.656501\n",
+       "triple_gauss  0.093072  0.833931 -0.653799"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "importlib.reload(compare_models)\n",
-    "comparator = CompareModels(filePath)\n",
-    "test, faint = comparator.getResults()\n",
+    "print(\"Random test\")\n",
     "test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "8607eb91-5feb-4a9c-bfc5-a01ffba00b8b",
+   "execution_count": 24,
+   "id": "8e16e8bc-07af-48de-b013-d0b1eb083271",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Faint\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -136,41 +160,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>dg_mean_stddev_dropout</th>\n",
-       "      <td>0.210995</td>\n",
-       "      <td>0.381905</td>\n",
-       "      <td>-0.471576</td>\n",
+       "      <th>single_gauss</th>\n",
+       "      <td>0.215438</td>\n",
+       "      <td>0.368892</td>\n",
+       "      <td>0.528413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>sg_mean_stddev</th>\n",
-       "      <td>0.210022</td>\n",
-       "      <td>0.384755</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>double_gauss</th>\n",
+       "      <td>0.217417</td>\n",
+       "      <td>0.363091</td>\n",
+       "      <td>0.317292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>triple_gauss</th>\n",
+       "      <td>0.218361</td>\n",
+       "      <td>0.360328</td>\n",
+       "      <td>0.265401</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             MSE       R^2       NLL\n",
-       "model_name                                          \n",
-       "dg_mean_stddev_dropout  0.210995  0.381905 -0.471576\n",
-       "sg_mean_stddev          0.210022  0.384755       NaN"
+       "                   MSE       R^2       NLL\n",
+       "model_name                                \n",
+       "single_gauss  0.215438  0.368892  0.528413\n",
+       "double_gauss  0.217417  0.363091  0.317292\n",
+       "triple_gauss  0.218361  0.360328  0.265401"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(\"Faint\")\n",
     "faint"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe064fb6-92b8-4507-a91d-85ecda5491cd",
+   "id": "0af393e9-7c98-4cec-a282-b174eb44e0e4",
    "metadata": {},
    "outputs": [],
    "source": []
