--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "82a693c9-00a6-4e71-a7a4-ab4bc7987a6f",
    "metadata": {},
    "outputs": [],
@@ -15,21 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "9cd1bc1b-7657-4535-81af-edeff810a6b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "comparator = compare_models.CompareModels(r\"../../metrics\")\n",
+    "comparator = compare_models.CompareModels(r\"../../metrics/experiment2\")\n",
     "test, faint = comparator.getResults()\n",
     "\n",
-    "order = [\"single_gauss\", \"double_gauss\", \"triple_gauss\"]\n",
-    "test, faint = test.reindex(order), faint.reindex(order)"
+    "# order = [\"single_gauss\", \"double_gauss\", \"triple_gauss\"]\n",
+    "# test, faint = test.reindex(order), faint.reindex(order)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "47398e35-c7ae-4aa1-83e0-c2080d1b081a",
    "metadata": {},
    "outputs": [
@@ -74,36 +74,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>single_gauss</th>\n",
-       "      <td>0.097607</td>\n",
-       "      <td>0.825839</td>\n",
-       "      <td>-0.174682</td>\n",
+       "      <th>ANN</th>\n",
+       "      <td>0.103878</td>\n",
+       "      <td>0.814649</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>double_gauss</th>\n",
-       "      <td>0.093189</td>\n",
-       "      <td>0.833722</td>\n",
-       "      <td>-0.656501</td>\n",
+       "      <th>MG_1_components</th>\n",
+       "      <td>0.103235</td>\n",
+       "      <td>0.815796</td>\n",
+       "      <td>-0.142893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>triple_gauss</th>\n",
-       "      <td>0.093072</td>\n",
-       "      <td>0.833931</td>\n",
-       "      <td>-0.653799</td>\n",
+       "      <th>MG_2_components</th>\n",
+       "      <td>0.092255</td>\n",
+       "      <td>0.835388</td>\n",
+       "      <td>-0.666300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MG_3_components</th>\n",
+       "      <td>0.094085</td>\n",
+       "      <td>0.832123</td>\n",
+       "      <td>-0.691918</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   MSE       R^2       NLL\n",
-       "model_name                                \n",
-       "single_gauss  0.097607  0.825839 -0.174682\n",
-       "double_gauss  0.093189  0.833722 -0.656501\n",
-       "triple_gauss  0.093072  0.833931 -0.653799"
+       "                      MSE       R^2       NLL\n",
+       "model_name                                   \n",
+       "ANN              0.103878  0.814649       NaN\n",
+       "MG_1_components  0.103235  0.815796 -0.142893\n",
+       "MG_2_components  0.092255  0.835388 -0.666300\n",
+       "MG_3_components  0.094085  0.832123 -0.691918"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "8e16e8bc-07af-48de-b013-d0b1eb083271",
    "metadata": {},
    "outputs": [
@@ -160,36 +167,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>single_gauss</th>\n",
-       "      <td>0.215438</td>\n",
-       "      <td>0.368892</td>\n",
-       "      <td>0.528413</td>\n",
+       "      <th>ANN</th>\n",
+       "      <td>0.228153</td>\n",
+       "      <td>0.330403</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>double_gauss</th>\n",
-       "      <td>0.217417</td>\n",
-       "      <td>0.363091</td>\n",
-       "      <td>0.317292</td>\n",
+       "      <th>MG_1_components</th>\n",
+       "      <td>0.219181</td>\n",
+       "      <td>0.356735</td>\n",
+       "      <td>0.467407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>triple_gauss</th>\n",
-       "      <td>0.218361</td>\n",
-       "      <td>0.360328</td>\n",
-       "      <td>0.265401</td>\n",
+       "      <th>MG_2_components</th>\n",
+       "      <td>0.213090</td>\n",
+       "      <td>0.374613</td>\n",
+       "      <td>0.283395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MG_3_components</th>\n",
+       "      <td>0.214645</td>\n",
+       "      <td>0.370049</td>\n",
+       "      <td>0.237744</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   MSE       R^2       NLL\n",
-       "model_name                                \n",
-       "single_gauss  0.215438  0.368892  0.528413\n",
-       "double_gauss  0.217417  0.363091  0.317292\n",
-       "triple_gauss  0.218361  0.360328  0.265401"
+       "                      MSE       R^2       NLL\n",
+       "model_name                                   \n",
+       "ANN              0.228153  0.330403       NaN\n",
+       "MG_1_components  0.219181  0.356735  0.467407\n",
+       "MG_2_components  0.213090  0.374613  0.283395\n",
+       "MG_3_components  0.214645  0.370049  0.237744"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
