fixed metrics; plotted 20 objects distributions

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a3e95812-ea9a-4aae-9665-5ed48babd764",
    "metadata": {},
    "outputs": [
@@ -13,75 +13,75 @@
       "\n",
       "=== ALL ===\n",
       "Test results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.103878  0.814649       NaN\n",
-      "BNN              0.093253  0.833608 -0.553463\n",
-      "MG_1_components  0.103235  0.815796 -0.142893\n",
-      "MG_2_components  0.092255  0.835388 -0.666300\n",
-      "MG_3_components  0.094085  0.832123 -0.691918\n",
-      "MG_4_components  0.094106  0.832086 -0.663337\n",
-      "MG_5_components  0.094370  0.831615 -0.639555\n",
+      "BNN              0.092460  0.835022 -0.544478\n",
+      "MG_1_components  0.103235  0.815796 -0.053694\n",
+      "MG_2_components  0.092255  0.835388 -0.586229\n",
+      "MG_3_components  0.094085  0.832123 -0.601487\n",
+      "MG_4_components  0.094106  0.832086 -0.574610\n",
+      "MG_5_components  0.094370  0.831615 -0.554423\n",
       "\n",
       "\n",
       "Faint results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.228153  0.330403       NaN\n",
-      "BNN              0.209137  0.386213  0.226049\n",
-      "MG_1_components  0.219181  0.356735  0.467407\n",
-      "MG_2_components  0.213090  0.374613  0.283395\n",
-      "MG_3_components  0.214645  0.370049  0.237744\n",
-      "MG_4_components  0.215004  0.368994  0.239241\n",
-      "MG_5_components  0.216531  0.364515  0.246389\n",
+      "BNN              0.206783  0.393122  0.201360\n",
+      "MG_1_components  0.219181  0.356735  0.598789\n",
+      "MG_2_components  0.213090  0.374613  0.467138\n",
+      "MG_3_components  0.214645  0.370049  0.397360\n",
+      "MG_4_components  0.215004  0.368994  0.373401\n",
+      "MG_5_components  0.216531  0.364515  0.382559\n",
       "\n",
       "=== NO_MISSING ===\n",
       "Test results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.093894  0.812506       NaN\n",
-      "BNN              0.079817  0.840616 -0.617807\n",
-      "MG_1_components  0.087873  0.824529 -0.203135\n",
-      "MG_2_components  0.080535  0.839183 -0.741086\n",
-      "MG_3_components  0.082290  0.835678 -0.764319\n",
-      "MG_4_components  0.082327  0.835605 -0.739923\n",
-      "MG_5_components  0.082725  0.834810 -0.717027\n",
+      "BNN              0.080635  0.838983 -0.607968\n",
+      "MG_1_components  0.087873  0.824529 -0.116718\n",
+      "MG_2_components  0.080535  0.839183 -0.662900\n",
+      "MG_3_components  0.082290  0.835678 -0.676485\n",
+      "MG_4_components  0.082327  0.835605 -0.652871\n",
+      "MG_5_components  0.082725  0.834810 -0.634775\n",
       "\n",
       "\n",
       "Faint results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.199057  0.286993       NaN\n",
-      "BNN              0.179309  0.357729  0.130376\n",
-      "MG_1_components  0.187882  0.327020  0.404371\n",
-      "MG_2_components  0.187977  0.326681  0.216912\n",
-      "MG_3_components  0.188926  0.323279  0.164468\n",
-      "MG_4_components  0.187303  0.329094  0.154650\n",
-      "MG_5_components  0.189760  0.320292  0.164588\n",
+      "BNN              0.179264  0.357891  0.117507\n",
+      "MG_1_components  0.187882  0.327020  0.520738\n",
+      "MG_2_components  0.187977  0.326681  0.401132\n",
+      "MG_3_components  0.188926  0.323279  0.318508\n",
+      "MG_4_components  0.187303  0.329094  0.281350\n",
+      "MG_5_components  0.189760  0.320292  0.293048\n",
       "\n",
       "=== ONLY_MISSING ===\n",
       "Test results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.221813  0.797102       NaN\n",
-      "BNN              0.251959  0.769527  0.206584\n",
-      "MG_1_components  0.284697  0.739580  0.568695\n",
-      "MG_2_components  0.230700  0.788973  0.217083\n",
-      "MG_3_components  0.233414  0.786490  0.163289\n",
-      "MG_4_components  0.233245  0.786645  0.241314\n",
-      "MG_5_components  0.231924  0.787853  0.275561\n",
+      "BNN              0.232144  0.787651  0.205474\n",
+      "MG_1_components  0.284697  0.739580  0.690757\n",
+      "MG_2_components  0.230700  0.788973  0.319427\n",
+      "MG_3_components  0.233414  0.786490  0.284408\n",
+      "MG_4_components  0.233245  0.786645  0.349817\n",
+      "MG_5_components  0.231924  0.787853  0.394714\n",
       "\n",
       "\n",
       "Faint results:\n",
-      "                      MSE       R^2       NLL\n",
+      "                      MSE       R^2  NLL_mean\n",
       "model_name                                   \n",
       "ANN              0.352396  0.340354       NaN\n",
-      "BNN              0.336505  0.370101  0.634570\n",
-      "MG_1_components  0.352830  0.339542  0.736570\n",
-      "MG_2_components  0.320322  0.400392  0.567275\n",
-      "MG_3_components  0.324463  0.392642  0.550633\n",
-      "MG_4_components  0.333288  0.376122  0.600444\n",
-      "MG_5_components  0.330840  0.380704  0.595677\n"
+      "BNN              0.324291  0.392963  0.559413\n",
+      "MG_1_components  0.352830  0.339542  0.932067\n",
+      "MG_2_components  0.320322  0.400392  0.748985\n",
+      "MG_3_components  0.324463  0.392642  0.734057\n",
+      "MG_4_components  0.333288  0.376122  0.766459\n",
+      "MG_5_components  0.330840  0.380704  0.764769\n"
      ]
     }
    ],
